maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:38: error: not found: value estfaceMur
  if (estfaceMur) {
      ^